--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,25 @@
 /captures
 .externalNativeBuild
 *.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
 *.bbl
 *.blg
-*.log
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
 *.out
 *.synctex.gz
-*.toc
