Added Import/Export Menu's and Firebase User auth

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.chrisphil.charbuilder">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,11 +27,8 @@
         <activity
             android:name=".controller.CharCreationController"
             android:label="@string/title_activity_char_creation_controller"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".controller.SettingsController"
-            android:label="@string/title_activity_settings_controller"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+
     </application>
 
 </manifest>
