--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.firebase:firebase-storage:11.8.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
+    compile 'com.itextpdf:itextg:5.5.9'
 
 }
 apply plugin: 'com.google.gms.google-services'
